fazendo o formulario do projeto

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
 }
+
+label{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+}
+
+form{
+  max-width: 40%;
+  margin: 0 auto;
+}
